# agent-runner

./: .gitignore  Cargo.toml  LICENSE  README.md  agent-runner-diagram-philosophy.md  agent-runner-diagram.html  vercel.json
.github/workflows/: deploy-web.yml  release.yml
agent-runner/: Cargo.toml  Dockerfile
agent-runner/src/: agent_dir.rs  config.rs  main.rs  output.rs  permissions.rs  run_log.rs  summarization.rs  trace.rs
agent-runner/src/agent/: loop.rs  planner.rs  subagent.rs
agent-runner/src/mcp/: transport.rs
agent-runner/src/provider/: mod.rs  openai.rs
agent-runner/src/skills/: skill.rs
agent-runner/src/tools/: done.rs  execute.rs  mod.rs  todos.rs
src/: agent_dir.rs  config.rs  main.rs  report.rs
src/agent/: loop.rs  mod.rs
src/mcp/: mod.rs
src/provider/: anthropic.rs  mod.rs
src/tools/: compact.rs  filesystem.rs  mod.rs  skill_tool.rs  subagent.rs
web-site/: index.html
